[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/font/Schr√∂dinger.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/interface/inventory/default_inventory_background.png" type="Texture" id=2]
[ext_resource path="res://scenes/gui/Stadistics/Stadistics.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Stadistics" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color( 0.196078, 0.196078, 0.196078, 0.862745 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 232.0
margin_top = 136.0
margin_right = 480.0
margin_bottom = 286.0
rect_min_size = Vector2( 0, 150 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_right = 80.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Estadisticas"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StadisticsContainer" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -60.0
margin_right = 116.0
margin_bottom = 61.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Background/StadisticsContainer"]
margin_top = 11.0
margin_right = 224.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.784314, 0.784314, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthContainer" type="HBoxContainer" parent="Background/StadisticsContainer"]
margin_top = 29.0
margin_right = 224.0
margin_bottom = 46.0
custom_constants/separation = 6

[node name="HealthButton" type="Button" parent="Background/StadisticsContainer/HealthContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
text = "+"

[node name="AttributeName" type="Label" parent="Background/StadisticsContainer/HealthContainer"]
margin_right = 53.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
text = "SALUD:"
align = 1

[node name="HealthActualMax" type="Label" parent="Background/StadisticsContainer/HealthContainer"]
margin_left = 59.0
margin_right = 125.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
text = "100/100"

[node name="ManaContainer" type="HBoxContainer" parent="Background/StadisticsContainer"]
margin_top = 50.0
margin_right = 224.0
margin_bottom = 67.0
custom_constants/separation = 6

[node name="ManaButton" type="Button" parent="Background/StadisticsContainer/ManaContainer"]
visible = false
margin_right = 20.0
margin_bottom = 20.0
text = "+"

[node name="AttributeName" type="Label" parent="Background/StadisticsContainer/ManaContainer"]
margin_right = 45.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
text = "MANA:"

[node name="ManaActualMax" type="Label" parent="Background/StadisticsContainer/ManaContainer"]
margin_left = 51.0
margin_right = 117.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
text = "100/100"

[node name="AttackContainer" type="HBoxContainer" parent="Background/StadisticsContainer"]
margin_top = 71.0
margin_right = 224.0
margin_bottom = 88.0

[node name="AttributeName" type="Label" parent="Background/StadisticsContainer/AttackContainer"]
margin_right = 65.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
text = "ATAQUE:"

[node name="AttackMinMax" type="Label" parent="Background/StadisticsContainer/AttackContainer"]
margin_left = 69.0
margin_right = 117.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
text = "50-75"

[node name="ArmorContainer" type="HBoxContainer" parent="Background/StadisticsContainer"]
margin_top = 92.0
margin_right = 224.0
margin_bottom = 109.0

[node name="AttributeName" type="Label" parent="Background/StadisticsContainer/ArmorContainer"]
margin_right = 85.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
text = "ARMADURA:"

[node name="ArmorPoints" type="Label" parent="Background/StadisticsContainer/ArmorContainer"]
margin_left = 89.0
margin_right = 109.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
text = "30"

[connection signal="pressed" from="Background/StadisticsContainer/HealthContainer/HealthButton" to="." method="_on_HealthButton_pressed"]
[connection signal="pressed" from="Background/StadisticsContainer/ManaContainer/ManaButton" to="." method="_on_ManaButton_pressed"]
